Adding gifs in examples

--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -69,16 +69,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import uptrain\n",
     "import time\n",
@@ -519,14 +510,9 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8503\n",
-      "  Network URL: http://192.168.6.92:8503\n",
+      "  Local URL: http://localhost:8504\n",
+      "  Network URL: http://192.168.6.64:8504\n",
       "\n",
-      "  For better performance, install the Watchdog module:\n",
-      "\n",
-      "  $ xcode-select --install\n",
-      "  $ pip install watchdog\n",
-      "            \n",
       "Drift detected with DDM at time: 111298!!!\n"
      ]
     }
@@ -556,12 +542,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31d1dc35-2b1c-4d8e-a39e-b4d7889e5f6a",
+   "metadata": {},
+   "source": [
+    "### From the UpTrain Dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ded14442-b8d3-4aef-9848-b4e1af3796c4",
    "metadata": {
     "tags": []
    },
    "source": [
-    "As can be noted from the dashboard, we start seeing a sharp dip in model's accuracy around the timestamp of 111k."
+    "The following is how it plays at the UpTrain dashboard. As can be noted, we start seeing a sharp dip in model's accuracy around the timestamp of 111k."
    ]
   },
   {
@@ -569,7 +563,7 @@
    "id": "d42079eb-b549-4fe8-88dd-442ddd255271",
    "metadata": {},
    "source": [
-    "<img width=\"629\" alt=\"concept_drift_avg_acc\" src=\"https://user-images.githubusercontent.com/5287871/216795937-7e3e0609-6053-4256-956d-c07de3b7d73e.png\">"
+    "<img width=\"629\" alt=\"concept_drift_avg_acc\" src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/fraud_detection/concept_drift_avg_acc.gif\">"
    ]
   },
   {
@@ -628,9 +622,9 @@
       "\t- type:\n",
       "\t\tMonitor.CUSTOM_MONITOR\n",
       "\t- initialize_func:\n",
-      "\t\t<function custom_initialize_func at 0x28d969870>\n",
+      "\t\t<function custom_initialize_func at 0x7fc9a77a39a0>\n",
       "\t- check_func:\n",
-      "\t\t<function custom_check_func at 0x28d969bd0>\n",
+      "\t\t<function custom_check_func at 0x7fc9a77a3910>\n",
       "\t- need_gt:\n",
       "\t\tTrue\n",
       "\t- type:\n",
@@ -762,12 +756,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ddd76985-5c96-4b84-a9c7-030b37741571",
+   "metadata": {},
+   "source": [
+    "### From the UpTrain Dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ff120f4-97a8-4d0f-aae8-ce18ff0bf326",
    "metadata": {},
    "source": [
     "As we see, we see a sudden (and more alarming) drop using our custom monitors. We can clearly see that the model accuracy drops from 99.7% to 77%, enabling us to send better alerts and take more urgent measures (ex: model retraining) to solve them. \n",
     "\n",
-    "<img width=\"624\" alt=\"concept_drift_custom\" src=\"https://user-images.githubusercontent.com/5287871/216795956-a35bcd9f-8b60-439d-9ea2-8e19854390bb.png\">"
+    "<img width=\"624\" alt=\"concept_drift_custom\" src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/fraud_detection/custom_measure.gif\">"
    ]
   },
   {
@@ -810,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
