--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -174,46 +174,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1397389</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1288953</th>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.013406</td>\n",
+       "      <td>0.006078</td>\n",
        "      <td>2016</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>59</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>966155</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.060024</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>256642</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.005566</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>15</td>\n",
        "      <td>4</td>\n",
        "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1435924</th>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.007862</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>420758</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.021319</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -221,19 +221,19 @@
       ],
       "text/plain": [
        "         vendor_id  passenger_count  store_and_fwd_flag      dist  \\\n",
-       "1397389          1                2                   0  0.013406   \n",
-       "966155           2                1                   0  0.060024   \n",
-       "256642           2                1                   0  0.005566   \n",
+       "1288953          2                1                   0  0.006078   \n",
+       "1435924          1                3                   0  0.007862   \n",
+       "420758           1                1                   0  0.021319   \n",
        "\n",
        "         pickup_year  pickup_month  pickup_day  pickup_dow  pickup_hour  \\\n",
-       "1397389         2016             2           3           2           18   \n",
-       "966155          2016             4          23           5            0   \n",
-       "256642          2016             4           1           4           16   \n",
+       "1288953         2016             1          15           4           16   \n",
+       "1435924         2016             3          12           5           18   \n",
+       "420758          2016             3          31           3           15   \n",
        "\n",
        "         pickup_min  pickup_sec  \n",
-       "1397389          59           1  \n",
-       "966155           53          28  \n",
-       "256642            3          22  "
+       "1288953          15          26  \n",
+       "1435924          15          13  \n",
+       "420758           21          14  "
       ]
      },
      "execution_count": 5,
@@ -301,8 +301,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Mean Percentage Error: 415.74 seconds\n",
-      "Training Mean Absolute Percentage Error: 75.34 %\n"
+      "Training Mean Percentage Error: 419.58 seconds\n",
+      "Training Mean Absolute Percentage Error: 74.59 %\n"
      ]
     }
    ],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "0ef9998f-97c9-4cf9-8349-916a6543c091",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1ff86aef-d3bc-4474-a7c6-5e9dbe80cdd6",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
    "id": "e3e03151-2dff-4c9e-85b4-6d1f953559fe",
    "metadata": {},
    "source": [
-    "<img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/shap_featurewise.png\" width=\"510\"/> <img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/shap_datapoint.png\" width=\"450\"/> "
+    "<img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/shap_featurewise.png\" width=\"450\"/> <img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/shap_datapoint.png\" width=\"410\"/> "
    ]
   },
   {
@@ -551,7 +551,7 @@
    "metadata": {},
    "source": [
     "### Demo Video: SHAP explainability\n",
-    "We have added a small video on how it looks below.\n",
+    "We have added a small illustration on how it looks at the UpTrain dashboard below.\n",
     "\n",
     "![gif](https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/4_Explanability_recording.gif)"
    ]
@@ -563,7 +563,9 @@
    "source": [
     "### MAE and MAPE Accuracy\n",
     "\n",
-    "<img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/mae.png\" width=\"450\"/> <img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/mape.png\" width=\"457\"/> "
+    "The following is how the MAE and MAPE accuracies are evolving with time on the UpTrain dashboard.\n",
+    "\n",
+    "<img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/mae.gif\" width=\"400\"/> <img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/mape.gif\" width=\"400\"/> "
    ]
   },
   {
@@ -575,7 +577,7 @@
     "We added a data integrity check for feature passenger_count >=1. We observe that data integrity is maintained through the test dataset (as data integrity is close to one)\n",
     "\n",
     "\n",
-    "<img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/data_integrity_passenger_count.png\" width=\"650\"/>"
+    "<img src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/data_integrity_passenger_count.png\" width=\"500\"/>"
    ]
   }
  ],
