--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -21,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "703f184c-e1a6-4f5e-be14-f959973a1a83",
    "metadata": {},
@@ -31,7 +32,7 @@
     "\n",
     "**Why is monitoring needed**: Once our fraud detection model has been trained, it may initially perform well in detecting malicious activity. However, over time, attackers may adapt their tactics and evolve their methods, leading to a mismatch between the type of attacks seen during training and those seen in production. This can result in decreased accuracy in our model's predictions.\n",
     "\n",
-    "**Solution**: We will be using UpTrain framework which provides an easy-to-configure way to log model predictions and attach ground-truth to monitor model's performance. We are using drift detection methon on top on model performance to raise alerts in case of any dip in model's accuracy, commonly called **Concept Drift.**"
+    "**Solution**: We will be using UpTrain framework which provides an easy-to-configure way to log model predictions and attach ground-truth to monitor model's performance. We are using drift detection method on top on model performance to raise alerts in case of any dip in model's accuracy, commonly called **Concept Drift.**"
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4bb6b22b-52f4-49df-9745-35dd53dccfbf",
    "metadata": {
     "tags": []
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ff84103b-5354-4d35-b3df-70ba8f58cbd7",
    "metadata": {
     "tags": []
@@ -103,14 +104,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data file exists. Skipping download.\n",
+      "Installing wget to download dataset from remote\n",
+      "Successfully installed wget\n",
+      "Downloading data from the remote server\n",
+      "Data downloaded\n",
       "NSL_KDD_binary.csv dataset prepared successfully!\n"
      ]
     }
    ],
    "source": [
+    "s3_url = \"https://oodles-dev-training-data.s3.amazonaws.com/\"\n",
     "data_file = \"NSL_KDD_binary.csv\"\n",
-    "download_dataset(data_file)"
+    "download_dataset(s3_url, data_file)"
    ]
   },
   {
