Minor fixes to text summarization

--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -211,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e90811646891421e851578a5580ada7b",
+       "model_id": "cd21f66eea2040f3aae0d603c2d10c7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fe3b319f7c441b2bc3d792e909abae6",
+       "model_id": "c01b398b3f45455a8c5dc4e8d17dc5c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee4a24b1270d4fdea02671cb974f1431",
+       "model_id": "0e58ae693a114128a4be4b5f5f9d6170",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,9 +340,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'model_input_text_to_summarize': ';\\n, Use the grater which has the smallest holes to make thin pieces or the bottle gourd.\\n\\n,, Let stand for 15 minutes.\\n\\n,,'} \n",
+      "{'model_input_text_to_summarize': \" Chickens do wander just like an outside cat. The last thing you want is the chickens walking across the road or ending up in the neighbours garden. Set up fencing or chicken wire for your flock to be sure that they are safe. It also keeps predators out.\\n\\n, Some plants can be toxic to chickens just like some types of foods. You can find a list by researching online. If you know what types of plants you have in your garden give them a search online.\\n\\n\\nAlthough chickens will avoid plants that are dangerous to them, there are always exceptions with them.\\n\\n, These are bad for chickens as they like to graze on grass often. If the chickens ingest these chemicals it can make them possibly ill.\\n\\n, All the foraging around the garden can be bad on the crop if you don't maintain the chickens well. Grit helps the chickens digest the nutrition they come across.\\n\\n\"} \n",
       "\n",
-      "{'model_output_summary': ['grater has the smallest holes to make thin pieces or the bottle gourd ']}\n"
+      "{'model_output_summary': ['chickens wander just like an outside cat. set up fencing or chicken wire for your flock']}\n"
      ]
     }
    ],
@@ -390,24 +390,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['id', 'dataset_label', 'title', 'text', 'output', 'bert_embs', 'bert_embs_downsampled', 'num_words'])\n"
+      "Embeddings for reference dataset exists. Skipping generating again.\n"
      ]
     }
    ],
    "source": [
-    "if not os.path.exists('data_with_embs.json'):\n",
-    "    data_with_embs = generate_reference_dataset_with_embeddings(billsum['train'], \n",
-    "                                tokenizer_t5, model_t5, dataset_label=\"billsum_train\")\n",
-    "    # Saving BERT embeddings to reuse next time\n",
-    "    json_data = json.dumps(data_with_embs)\n",
-    "    f = open('data_with_embs.json', \"w\")\n",
-    "    f.write(json_data)\n",
-    "    f.close()\n",
-    "else:\n",
-    "    f = open('data_with_embs.json')\n",
-    "    data_with_embs = json.load(f)\n",
-    "\n",
-    "print(data_with_embs[0].keys())"
+    "# Generate BERT embeddings for the reference (aka training) dataset\n",
+    "generate_reference_dataset_with_embeddings(billsum['train'], \n",
+    "                    tokenizer_t5, model_t5, dataset_label=\"billsum_train\")"
    ]
   },
   {
@@ -532,27 +522,24 @@
       "  Local URL: http://localhost:8501\n",
       "  Network URL: http://192.168.6.64:8501\n",
       "\n",
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n"
+      "Num predictions logged: 100\n",
+      "Num predictions logged: 200\n",
+      "Num predictions logged: 300\n",
+      "Num predictions logged: 400\n",
+      "Num predictions logged: 500\n",
+      "Num predictions logged: 600\n",
+      "Num predictions logged: 700\n"
      ]
     }
    ],
    "source": [
     "framework_umap = uptrain.Framework(cfg_dict=config)\n",
     "\n",
-    "batch_size = 25\n",
+    "batch_size = 100\n",
     "all_summaries = []\n",
     "all_bert_embs = []\n",
     "\n",
     "for idx in range(int(len(final_test_dataset)/batch_size)):\n",
-    "    if idx % 4 == 0:\n",
-    "        print(idx*batch_size)\n",
-    "\n",
     "    this_batch = [prefix + doc for doc in final_test_dataset[idx*batch_size: (idx+1)*batch_size]['text']]\n",
     "\n",
     "    # Text encoder\n",
@@ -574,7 +561,8 @@
     "        \"dataset_label\": final_test_dataset[idx*batch_size: (idx+1)*batch_size]['dataset_label']\n",
     "    }\n",
     "\n",
-    "    idens = framework_umap.log(inputs=inputs, outputs=summaries)"
+    "    idens = framework_umap.log(inputs=inputs, outputs=summaries)\n",
+    "    print(\"Num predictions logged:\", (idx+1)*batch_size)"
    ]
   },
   {
@@ -709,16 +697,14 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
-      "50 edge cases identified out of 350 total samples\n",
+      "50 edge cases identified out of 300 total samples\n",
       "Some edge cases (i.e. points which are far away from training clusters, identified by UpTrain:\n",
-      "['\"state registrars and county recorders may release their comprehensive birth, death, and marriage\"', '\"the public transportation agency may enact and enforce an ordinance to impose and enforce an administrative\"', '\"10912 of the water code is amended to read: 10912. the water\"', '\"a person between 18 and 21 years of age may be employed to work in a gambling\"', '\"the state has provided approximately $2.5 billion in funding for local jail construction projects. the state\"', '\"11834.09 of the health and safety code is amended to read: 11834\"', '\"the statement may include the name, age, and occupation of the candidate. the statement may\"', '\"the state penalty is levied for every ten dollars ($10), or part of \"', '\"the state provides insurance coverage of reproductive health care and counseling to eligible, low-income women \"', '\"the advertising display is located within the boundary limits of the City of Inglewood. the\"']\n"
+      "['\"a custodian may deny a request under this part from a fi\"', '\"the department of food and agriculture shall administer a medical cannabis Cultivation Program.\"', '\"a California State University campus-based mandatory fee is not reallocated. the fee\"', '\"a person owing support has the means to pay support while incarcerated or in\"', '\"the dental board of California is establishing the California Dental Corps Loan Repayment Program of 2002 \"', '\"2.3 million people are incarcerated in the united states each year. 700,\"', '\"a person exempt under this paragraph shall not otherwise engage in the practice of veterinary medicine\"', '\"a person, including any juvenile, is convicted of or pleads guilty or no\"', '\"the prepaid MTS surcharge shall be imposed as a percentage of the sales price\"', '\"a registered dental hygienist in alternative practice corporation is a professional corporation\"']\n"
      ]
     }
    ],
    "source": [
     "framework_data_drift = uptrain.Framework(cfg_dict=config)\n",
-    "\n",
-    "batch_size = 25\n",
     "\n",
     "for idx in range(int(len(final_test_dataset)/batch_size)):\n",
     "    this_batch = [prefix + doc for doc in final_test_dataset[idx*batch_size: (idx+1)*batch_size]['text'] if doc is not None]\n",
@@ -869,16 +855,14 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
-      "51 edge cases identified out of 325 total samples\n",
+      "55 edge cases identified out of 300 total samples\n",
       "Some collected edge cases\n",
-      "['\"state registrars and county recorders may release their comprehensive birth, death, and marriage\"', '\"the public transportation agency may enact and enforce an ordinance to impose and enforce an administrative\"', '\"10912 of the water code is amended to read: 10912. the water\"', '\"a person between 18 and 21 years of age may be employed to work in a gambling\"', '\"the state has provided approximately $2.5 billion in funding for local jail construction projects. the state\"', '\"11834.09 of the health and safety code is amended to read: 11834\"', '\"the statement may include the name, age, and occupation of the candidate. the statement may\"', '\"the state penalty is levied for every ten dollars ($10), or part of \"', '\"the state provides insurance coverage of reproductive health care and counseling to eligible, low-income women \"', '\"the advertising display is located within the boundary limits of the City of Inglewood. the\"']\n"
+      "['\"a custodian may deny a request under this part from a fi\"', '\"the department of food and agriculture shall administer a medical cannabis Cultivation Program.\"', '\"a California State University campus-based mandatory fee is not reallocated. the fee\"', '\"a person owing support has the means to pay support while incarcerated or in\"', '\"the dental board of California is establishing the California Dental Corps Loan Repayment Program of 2002 \"', '\"2.3 million people are incarcerated in the united states each year. 700,\"', '\"a person exempt under this paragraph shall not otherwise engage in the practice of veterinary medicine\"', '\"a person, including any juvenile, is convicted of or pleads guilty or no\"', '\"the prepaid MTS surcharge shall be imposed as a percentage of the sales price\"', '\"a registered dental hygienist in alternative practice corporation is a professional corporation\"']\n"
      ]
     }
    ],
    "source": [
     "framework_edge_cases = uptrain.Framework(cfg_dict=config)\n",
-    "\n",
-    "batch_size = 25\n",
     "\n",
     "for idx in range(int(len(final_test_dataset)/batch_size)):\n",
     "    this_batch = [prefix + doc for doc in final_test_dataset[idx*batch_size: \n",
