Removing duplicated code in t-SNE and UMAP

--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -439,7 +439,7 @@
     "    }],\n",
     "    'min_dist': 0.01,\n",
     "    'n_neighbors': 20,\n",
-    "    'metric_umap': 'euclidean',\n",
+    "    'metric': 'euclidean',\n",
     "    'dim': '2D',\n",
     "    \"update_freq\": 100,\n",
     "    'initial_dataset': \"ref_dataset.json\",\n",
