--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -113,7 +113,7 @@
     }
    ],
    "source": [
-    "s3_url = \"https://oodles-dev-training-data.s3.amazonaws.com/\"\n",
+    "s3_url = \"https://oodles-dev-training-data.s3.amazonaws.com\"\n",
     "data_file = \"NSL_KDD_binary.csv\"\n",
     "download_dataset(s3_url, data_file)"
    ]
