--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -26,13 +26,13 @@
    "id": "703f184c-e1a6-4f5e-be14-f959973a1a83",
    "metadata": {},
    "source": [
-    "**Overview**: In this example, we see how to use UpTrain to monitor performance of a fraud classification task. For the same, we will be training a binary classifier on a popular network traffic dataset called the [NSL-KDD dataset](https://www.unb.ca/cic/datasets/nsl.html) for cyber-attack classification using the [XGBoost classifier](https://xgboost.readthedocs.io/en/stable/). \n",
+    "**Overview**: In this example, we see how to use UpTrain to monitor performance of a fraud classification task. To do this, we will train a binary classifier on a popular network traffic dataset called the [NSL-KDD dataset](https://www.unb.ca/cic/datasets/nsl.html) for cyber-attack classification using the [XGBoost classifier](https://xgboost.readthedocs.io/en/stable/). \n",
     "\n",
     "**Dataset**: The NSL-KDD dataset includes a variety of network attack types, including denial-of-service (DoS) attacks, unauthorized access (U2R) attacks, and probe attacks. The dataset contains a total of around 25,000 instances and 41 different features that describe the behavior of network connections, such as the number of failed login attempts and the size of packets transmitted.\n",
     "\n",
-    "**Why is monitoring needed**: Once our fraud detection model has been trained, it may initially perform well in detecting malicious activity. However, over time, attackers may adapt their tactics and evolve their methods, leading to a mismatch between the type of attacks seen during training and those seen in production. This can result in decreased accuracy in our model's predictions.\n",
+    "**Why is monitoring needed**: Once our fraud detection model has finished training, it may initially perform well in detecting malicious activity. However, over time, attackers may adapt their tactics and evolve their methods, leading to a mismatch between the type of attacks seen during training and those seen in production. This can result in decreased accuracy in our model's predictions.\n",
     "\n",
-    "**Solution**: We will be using UpTrain framework which provides an easy-to-configure way to log model predictions and attach ground-truth to monitor model's performance. We are using drift detection method on top on model performance to raise alerts in case of any dip in model's accuracy, commonly called **Concept Drift.**"
+    "**Solution**: We will use the UpTrain framework which provides an easy-to-configure way to log model predictions and attach ground-truth to monitor the model's performance. We are using drift detection method on top of the model's performance to raise alerts in case of any dip in the model's accuracy. This kind of data drift that occurs when the statistical properties of the target variable changes is commonly called **Concept Drift.**"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "9fcf6586-639e-4b45-8dfd-671f724c766f",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "4bb6b22b-52f4-49df-9745-35dd53dccfbf",
    "metadata": {
     "tags": []
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "ff84103b-5354-4d35-b3df-70ba8f58cbd7",
    "metadata": {
     "tags": []
@@ -104,10 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installing wget to download dataset from remote\n",
-      "Successfully installed wget\n",
-      "Downloading data from the remote server\n",
-      "Data downloaded\n",
+      "Data file exists. Skipping download.\n",
       "NSL_KDD_binary.csv dataset prepared successfully!\n"
      ]
     }
@@ -128,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "cee0e008-c9b3-460a-990e-2716ea5483b2",
    "metadata": {
     "tags": []
@@ -360,7 +357,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "9cffb270-0cb5-4f84-83ea-e8f195dae0fc",
    "metadata": {
     "tags": []
@@ -417,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "bad7ee0b-7318-4a2f-a681-81bac98547f5",
    "metadata": {
     "tags": []
@@ -458,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "09bf8897-5807-4899-bf48-4dfbdfcca7fb",
    "metadata": {
     "tags": []
@@ -499,8 +496,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6fc98bbc",
+   "metadata": {},
+   "source": [
+    "If you have not used streamlit before on your system, follow the instructions at https://docs.streamlit.io/library/get-started/installation before running the next cell"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "474b25b9-c0cd-4cfb-bb34-f2e5a0eb5069",
    "metadata": {
     "tags": []
@@ -515,10 +521,10 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8504\n",
-      "  Network URL: http://192.168.6.64:8504\n",
+      "  Local URL: http://localhost:8501\n",
+      "  Network URL: http://10.20.206.136:8501\n",
       "\n",
-      "Drift detected with DDM at time: 111298!!!\n"
+      "Drift detected with DDM at time: 111296\n"
      ]
     }
    ],
@@ -613,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
    "metadata": {
     "tags": []
@@ -627,9 +633,9 @@
       "\t- type:\n",
       "\t\tMonitor.CUSTOM_MONITOR\n",
       "\t- initialize_func:\n",
-      "\t\t<function custom_initialize_func at 0x7fc9a77a39a0>\n",
+      "\t\t<function custom_initialize_func at 0x7fb9387f8ee0>\n",
       "\t- check_func:\n",
-      "\t\t<function custom_check_func at 0x7fc9a77a3910>\n",
+      "\t\t<function custom_check_func at 0x7fb9387f8f70>\n",
       "\t- need_gt:\n",
       "\t\tTrue\n",
       "\t- type:\n",
@@ -719,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "63118254-37a2-4ec0-9a9d-16a4c3e376d1",
    "metadata": {
     "tags": []
@@ -731,8 +737,13 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
-      "Concept drift detected with custom metric at time: 111000!!!\n",
-      "Drift detected with DDM at time: 111298!!!\n"
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Local URL: http://localhost:8502\n",
+      "  Network URL: http://10.20.206.136:8502\n",
+      "\n",
+      "Drift detected with DDM at time: 111296\n"
      ]
     }
    ],
