Update Fraud Detection (#183)
* docs: Added README."de".md translation via https://github.com/dephraiim/translate-readme

* Fix broken URL

* Update explanation

* Minor changes

* Add type hints

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -26,13 +26,13 @@
    "id": "703f184c-e1a6-4f5e-be14-f959973a1a83",
    "metadata": {},
    "source": [
-    "**Overview**: In this example, we see how to use UpTrain to monitor performance of a fraud classification task. For the same, we will be training a binary classifier on a popular network traffic dataset called the [NSL-KDD dataset](https://www.unb.ca/cic/datasets/nsl.html) for cyber-attack classification using the [XGBoost classifier](https://xgboost.readthedocs.io/en/stable/). \n",
+    "**Overview**: In this example, we see how to use UpTrain to monitor performance of a fraud classification task. To do this, we will train a binary classifier on a popular network traffic dataset called the [NSL-KDD dataset](https://www.unb.ca/cic/datasets/nsl.html) for cyber-attack classification using the [XGBoost classifier](https://xgboost.readthedocs.io/en/stable/). \n",
     "\n",
     "**Dataset**: The NSL-KDD dataset includes a variety of network attack types, including denial-of-service (DoS) attacks, unauthorized access (U2R) attacks, and probe attacks. The dataset contains a total of around 25,000 instances and 41 different features that describe the behavior of network connections, such as the number of failed login attempts and the size of packets transmitted.\n",
     "\n",
-    "**Why is monitoring needed**: Once our fraud detection model has been trained, it may initially perform well in detecting malicious activity. However, over time, attackers may adapt their tactics and evolve their methods, leading to a mismatch between the type of attacks seen during training and those seen in production. This can result in decreased accuracy in our model's predictions.\n",
+    "**Why is monitoring needed**: Once our fraud detection model has finished training, it may initially perform well in detecting malicious activity. However, over time, attackers may adapt their tactics and evolve their methods, leading to a mismatch between the type of attacks seen during training and those seen in production. This can result in decreased accuracy in our model's predictions.\n",
     "\n",
-    "**Solution**: We will be using UpTrain framework which provides an easy-to-configure way to log model predictions and attach ground-truth to monitor model's performance. We are using drift detection method on top on model performance to raise alerts in case of any dip in model's accuracy, commonly called **Concept Drift.**"
+    "**Solution**: We will use the UpTrain framework which provides an easy-to-configure way to log model predictions and attach ground-truth to monitor the model's performance. We are using drift detection method on top of the model's performance to raise alerts in case of any dip in the model's accuracy. This kind of data drift that occurs when the statistical properties of the target variable changes is commonly called **Concept Drift.**"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "9fcf6586-639e-4b45-8dfd-671f724c766f",
    "metadata": {
     "tags": []
@@ -75,7 +75,6 @@
     "import uptrain\n",
     "import time\n",
     "import numpy as np\n",
-    "import yaml \n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -113,7 +112,7 @@
     }
    ],
    "source": [
-    "s3_url = \"https://oodles-dev-training-data.s3.amazonaws.com/\"\n",
+    "s3_url = \"https://oodles-dev-training-data.s3.amazonaws.com\"\n",
     "data_file = \"NSL_KDD_binary.csv\"\n",
     "download_dataset(s3_url, data_file)"
    ]
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cee0e008-c9b3-460a-990e-2716ea5483b2",
    "metadata": {
     "tags": []
@@ -360,7 +359,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9cffb270-0cb5-4f84-83ea-e8f195dae0fc",
    "metadata": {
     "tags": []
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bad7ee0b-7318-4a2f-a681-81bac98547f5",
    "metadata": {
     "tags": []
@@ -458,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "09bf8897-5807-4899-bf48-4dfbdfcca7fb",
    "metadata": {
     "tags": []
@@ -499,8 +498,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6fc98bbc",
+   "metadata": {},
+   "source": [
+    "If you have not used streamlit before on your system, follow the instructions at https://docs.streamlit.io/library/get-started/installation before running the next cell"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "474b25b9-c0cd-4cfb-bb34-f2e5a0eb5069",
    "metadata": {
     "tags": []
@@ -515,10 +523,10 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8504\n",
-      "  Network URL: http://192.168.6.64:8504\n",
+      "  Local URL: http://localhost:8501\n",
+      "  Network URL: http://192.168.1.13:8501\n",
       "\n",
-      "Drift detected with DDM at time: 111298!!!\n"
+      "Drift detected with DDM at time: 111296\n"
      ]
     }
    ],
@@ -560,7 +568,7 @@
     "tags": []
    },
    "source": [
-    "The following is how it plays at the UpTrain dashboard. As can be noted, we start seeing a sharp dip in model's accuracy around the timestamp of 111k."
+    "Here is a snippet of the model's performance from the UpTrain dashboard. As you can see, the model's accuracy starts to dip around the timestamp of 111k."
    ]
   },
   {
@@ -576,7 +584,7 @@
    "id": "f8284211-8a38-4a30-80eb-2afb5ad698ec",
    "metadata": {},
    "source": [
-    "In the this example, we used a popular drift detection algorithm called the [Drift Detection Method (DDM)](https://riverml.xyz/0.11.1/api/drift/DDM/) which is already implemented as a part of the UpTrain package. However, as we see the model accuracy is dropping from 99.7% to 96.9% which is still a slow decline and might not raise many eyebrows. "
+    "In this example, we used a popular drift detection algorithm called the [Drift Detection Method (DDM)](https://riverml.xyz/0.11.1/api/drift/DDM/) which is already implemented as a part of the UpTrain package. However, as we can see the model accuracy dropped from 99.7% to 96.9%, which is still a slow decline and might not raise many eyebrows. "
    ]
   },
   {
@@ -584,7 +592,7 @@
    "id": "0124e2a3-75f7-454e-93de-02525b70e14d",
    "metadata": {},
    "source": [
-    "For better detection and understanding the severity of the issue, one might want to define a customized metric and monitor the models using them. Let's see how to do that in UpTrain."
+    "For better detection and to understand the severity of the issue, one might want to define a customized metric and monitor the models using them. Let's see how we can do this in UpTrain."
    ]
   },
   {
@@ -600,7 +608,7 @@
    "id": "16a788df-c12f-4aea-a5d7-62e6199d4eff",
    "metadata": {},
    "source": [
-    "We now define a custom drift metric which monitors the difference between accuracy of the model on the first 200 predictions and the most recent 200 predictions. This way, they can quickly identify if there was a sudden degradation in the model performance."
+    "We now define a custom drift metric which monitors the difference between accuracy of the model in the first 200 predictions and the latest 200 predictions. This way, we can quickly identify if there is a sudden degradation in the model's performance."
    ]
   },
   {
@@ -613,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
    "metadata": {
     "tags": []
@@ -627,9 +635,9 @@
       "\t- type:\n",
       "\t\tMonitor.CUSTOM_MONITOR\n",
       "\t- initialize_func:\n",
-      "\t\t<function custom_initialize_func at 0x7fc9a77a39a0>\n",
+      "\t\t<function custom_initialize_func at 0x7fb9387f8ee0>\n",
       "\t- check_func:\n",
-      "\t\t<function custom_check_func at 0x7fc9a77a3910>\n",
+      "\t\t<function custom_check_func at 0x7fb9387f8f70>\n",
       "\t- need_gt:\n",
       "\t\tTrue\n",
       "\t- type:\n",
@@ -649,7 +657,7 @@
     "Defining a custom drift metric to check if accuracy drops beyond a threshold.\n",
     "\"\"\"\n",
     "\n",
-    "def custom_initialize_func(self):\n",
+    "def custom_initialize_func(self) -> None:\n",
     "    self.initial_acc = None       \n",
     "    self.acc_arr = []\n",
     "    self.count = 0       \n",
@@ -657,7 +665,7 @@
     "    self.window_size = 200\n",
     "    self.is_drift_detected = False\n",
     "\n",
-    "def custom_check_func(self, inputs, outputs, gts=None, extra_args={}):\n",
+    "def custom_check_func(self, inputs, outputs, gts=None, extra_args={}) -> None:\n",
     "    batch_size = len(extra_args[\"id\"])\n",
     "    self.count += batch_size\n",
     "    self.acc_arr.extend(list(np.equal(gts, outputs)))\n",
@@ -719,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "63118254-37a2-4ec0-9a9d-16a4c3e376d1",
    "metadata": {
     "tags": []
@@ -731,8 +739,13 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
-      "Concept drift detected with custom metric at time: 111000!!!\n",
-      "Drift detected with DDM at time: 111298!!!\n"
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Local URL: http://localhost:8502\n",
+      "  Network URL: http://10.20.206.136:8502\n",
+      "\n",
+      "Drift detected with DDM at time: 111296\n"
      ]
     }
    ],
@@ -772,7 +785,7 @@
    "id": "6ff120f4-97a8-4d0f-aae8-ce18ff0bf326",
    "metadata": {},
    "source": [
-    "As we see, we see a sudden (and more alarming) drop using our custom monitors. We can clearly see that the model accuracy drops from 99.7% to 77%, enabling us to send better alerts and take more urgent measures (ex: model retraining) to solve them. \n",
+    "After using our custom monitors, we see a sudden and more alarming drop in the model accuracy. It drops from 99.7% to 77%. Being able to detect this drop early enables us to send better alerts and take more urgent measures (ex: model retraining) to resolve them. \n",
     "\n",
     "<img width=\"624\" alt=\"concept_drift_custom\" src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/fraud_detection/custom_measure.gif\">"
    ]
@@ -790,13 +803,13 @@
    "id": "09c998ab-9381-4d51-a52d-9853828f7e70",
    "metadata": {},
    "source": [
-    "Model monitoring is very crucial for tasks such as fraud detection, cyber-security attacks etc. where the malicious agents continuously improve their attack vectors and with time, learn to evade detection. Real-time model observability enables one to proactively address any performance degradation before it leads to serious consequences, such as hacks or financial loss.\n",
+    "Model monitoring is crucial for tasks such as fraud detection, cyber-security attacks etc. where the malicious agents continuously improve their attack vectors and with time, learn to evade detection. Real-time model observability enables one to proactively address any performance degradation before it leads to serious consequences, such as data breaches or financial losses.\n",
     "\n",
-    "In this example, we saw two ways to detect performance degradation - Concept Drift via DDM and Custom monitor. The UpTrain framework has many other statistical tools, such as data drift, integrity checks, shift in model outputs, and outlier detection, that can be used to identify model issues, even in cases where ground truth is not available. You can explore them [here](https://github.com/uptrain-ai/uptrain/tree/main/examples)\n",
+    "In this example, we saw two ways to detect performance degradation - Concept Drift via DDM and Custom Monitor. The UpTrain framework has many other statistical tools, such as data drift, integrity checks, shift in model outputs, and outlier detection, that can be used to identify model issues, even in cases where ground truth is not available. You can explore them [here](https://github.com/uptrain-ai/uptrain/tree/main/examples)\n",
     "\n",
     "- Automatically detecting edge-cases and out-of-distribution samples - [Link](https://github.com/uptrain-ai/uptrain/blob/main/examples/human_orientation_classification/run.ipynb)\n",
     "- Defining custom signals to identify edge-cases - [Link](https://github.com/uptrain-ai/uptrain/blob/main/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_torch.ipynb)\n",
-    "- Using Data-Drift (i.e. shifts in input distribution) to identify dips in model performance - Coming soon\n",
+    "- Using Data-Drift (i.e. shifts in input distribution) to identify dips in model performance - [Link](https://github.com/uptrain-ai/uptrain/blob/main/examples/1_orientation_classification/deepdive_examples/uptrain_data_drift_custom_measures.ipynb)\n",
     "- Monitoring bias in recommendation systems - [Link](https://github.com/uptrain-ai/uptrain/blob/main/examples/shopping_cart_recommendation/run.ipynb)\n"
    ]
   }
@@ -817,7 +830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
