Add Key Features and Concept Drift cards

--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -14,12 +14,28 @@ description: "What is UpTrain?"
   >
     Get started with UpTrain in minutes
   </Card>
-    <Card
-        title="Examples"
-        href="/examples/text-summarization"
-        icon="cube"
-        color="#0081eb"
-    >
-        See how UpTrain works in practice
-    </Card>
+  <Card
+    title="Examples"
+    href="/examples/text-summarization"
+    icon="cube"
+    color="#0081eb"
+  >
+    See how UpTrain works in practice
+  </Card>
+  <Card
+    title="Key Features"
+    href="/getting-started/key-features"
+    icon="list"
+    color="#b50e0e"
+  >
+    Learn what can UpTrain do in practice
+  </Card>
+  <Card
+    title="Monitors"
+    href="/monitors/concept-drift"
+    icon="chart-line-up"
+    color="#0fba20"
+  >
+    Track your model's performance
+  </Card>
 </CardGroup>
